--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -614,9 +614,9 @@ h6 {
 }
 
 @media (max-width: 1199px) {
-  .sidebar {
+  /* .sidebar {
     left: -300px;
-  }
+  } */
 }
 
 .sidebar::-webkit-scrollbar {
